[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/start.gd" type="Script" id=1]
[ext_resource path="res://resorces/monkey/jump/jump1.png" type="Texture" id=2]
[ext_resource path="res://resorces/elephent/jump/jump4.png" type="Texture" id=3]
[ext_resource path="res://resorces/monkey/jump/jump4.png" type="Texture" id=4]
[ext_resource path="res://resorces/elephent/jump/jump1.png" type="Texture" id=5]
[ext_resource path="res://resorces/deer/jump/jump4.png" type="Texture" id=6]
[ext_resource path="res://resorces/deer/jump/jump1.png" type="Texture" id=7]
[ext_resource path="res://resorces/sounds/title.ogg" type="AudioStream" id=8]

[node name="Node2D" type="Node2D"]
position = Vector2( 1.25995, 0 )
script = ExtResource( 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -16.087
pitch_scale = 0.61
autoplay = true

[node name="ColorRect" type="ColorRect" parent="."]
margin_top = 6.0
margin_right = 968.0
margin_bottom = 560.0
color = Color( 0.0823529, 0.0823529, 0.0823529, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="jump1" type="Sprite" parent="."]
position = Vector2( 736.88, 283.205 )
scale = Vector2( 17, 17 )
texture = ExtResource( 2 )

[node name="jump2" type="Sprite" parent="."]
position = Vector2( 735.292, 279.875 )
scale = Vector2( 17, 17 )
texture = ExtResource( 5 )

[node name="jump3" type="Sprite" parent="."]
position = Vector2( 719.062, 280.532 )
scale = Vector2( 17, 17 )
texture = ExtResource( 7 )

[node name="jump4" type="Sprite" parent="."]
position = Vector2( 735.989, 283.205 )
scale = Vector2( 17, 17 )
texture = ExtResource( 4 )

[node name="jump5" type="Sprite" parent="."]
position = Vector2( 736.183, 280.766 )
scale = Vector2( 17, 17 )
texture = ExtResource( 3 )

[node name="jump6" type="Sprite" parent="."]
position = Vector2( 737.108, 279.641 )
scale = Vector2( 17, 17 )
texture = ExtResource( 6 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 482.804, 282.749 )
current = true
zoom = Vector2( 0.5, 0.5 )

[node name="Button" type="Button" parent="."]
margin_left = 211.289
margin_top = 283.267
margin_right = 266.289
margin_bottom = 312.267
text = "start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox" type="CheckBox" parent="."]
margin_left = 14.6832
margin_top = 520.588
margin_right = 38.6832
margin_bottom = 544.588
text = "fullscreen"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="toggled" from="CheckBox" to="." method="_on_CheckBox_toggled"]
